{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 35,
  "lineage": "e4aea887-8f70-7b5c-48ec-a8a20c268cd7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysqlinstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05552de7090330129",
            "arn": "arn:aws:ec2:ap-south-1:000493632188:instance/i-006ea49b7995950f0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006ea49b7995950f0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mysql_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05c2709b157de8a8f",
            "private_dns": "ip-192-168-1-118.ap-south-1.compute.internal",
            "private_ip": "192.168.1.118",
            "public_dns": "ec2-13-127-189-192.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.189.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c59957a7128c6beb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d984b86179f38b88"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ca8e68eca91fa95",
            "tags": {
              "Name": "mysqlos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d984b86179f38b88"
            ]
          },
          "dependencies": [
            "aws_key_pair.mysql_key",
            "aws_security_group.mysqlsg",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wpinstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f69f7ee089055fe",
            "arn": "arn:aws:ec2:ap-south-1:000493632188:instance/i-001ec8a4133fb121c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001ec8a4133fb121c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wordpress_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a39228b8f34970c6",
            "private_dns": "ip-192-168-0-213.ap-south-1.compute.internal",
            "private_ip": "192.168.0.213",
            "public_dns": "ec2-13-233-68-227.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.68.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cd93d595cf91c239",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00b5559e0de7501ef"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de71d8cd77ffdf8e",
            "tags": {
              "Name": "wpos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00b5559e0de7501ef"
            ]
          },
          "dependencies": [
            "aws_key_pair.wordpress_key",
            "aws_security_group.mywpsg",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:internet-gateway/igw-0c4cf08da7cb2ee59",
            "id": "igw-0c4cf08da7cb2ee59",
            "owner_id": "000493632188",
            "tags": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-0f19a6d7005cec64f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dd16585c80508339",
            "owner_id": "000493632188",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4cf08da7cb2ee59",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroutetable"
            },
            "vpc_id": "vpc-0f19a6d7005cec64f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassociation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048ef15abbf104928",
            "route_table_id": "rtb-0dd16585c80508339",
            "subnet_id": "subnet-0de71d8cd77ffdf8e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysqlsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:security-group/sg-0d984b86179f38b88",
            "description": "Allow MYSQL from wordpress only for privacy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d984b86179f38b88",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b5559e0de7501ef"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql_sg",
            "name_prefix": "",
            "owner_id": "000493632188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19a6d7005cec64f"
          },
          "dependencies": [
            "aws_security_group.mywpsg",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mywpsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:security-group/sg-00b5559e0de7501ef",
            "description": "Allow HTTP and SSH for wordpress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b5559e0de7501ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wordpress_sg",
            "name_prefix": "",
            "owner_id": "000493632188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19a6d7005cec64f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:subnet/subnet-0de71d8cd77ffdf8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0de71d8cd77ffdf8e",
            "map_public_ip_on_launch": true,
            "owner_id": "000493632188",
            "tags": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-0f19a6d7005cec64f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:subnet/subnet-02ca8e68eca91fa95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-02ca8e68eca91fa95",
            "map_public_ip_on_launch": true,
            "owner_id": "000493632188",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-0f19a6d7005cec64f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:vpc/vpc-0f19a6d7005cec64f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0fd5b1d69e8808f8b",
            "default_route_table_id": "rtb-03784cf84761a5a19",
            "default_security_group_id": "sg-01e0e9f1e6924a4ca",
            "dhcp_options_id": "dopt-7add2711",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f19a6d7005cec64f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03784cf84761a5a19",
            "owner_id": "000493632188",
            "tags": {
              "Name": "wordpressvpc"
            }
          }
        }
      ]
    }
  ]
}